--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </head>
     
       <header id="header" class="justify-content-between"></header>
-        <script type="text/javascript" src="/js/header.js"></script>
+        <script type="text/javascript" src="header.js"></script>
 
 
         <!-- CARROSSEL -->
