--- a/html/Carrinho.html
+++ b/html/Carrinho.html
@@ -90,7 +90,7 @@
   <body class="bg-dark">
       
         <header id="header" class="justify-content-between"></header>
-        <script type="text/javascript" src="/js/header.js"></script>
+        <script type="text/javascript" src="/king_NEs/js/header.js"></script>
 
         <div class="text-center">
           <h1 class="mt-2 text-light">Carrinho</h1>
@@ -112,7 +112,7 @@
             <h3 class="text-light mt-5">Resumo do pedido</h3>
             <div type="text" id="pedido1" class="bg-light ml-3 p-3 text-dark text-left"></div>
 
-            <a href="/html/usuario.html" class="btn btn-warning m-1">Alterar dados</a>
+            <a href="/king_NEs/html/usuario.html" class="btn btn-warning m-1">Alterar dados</a>
             <a target="_blank" onclick="envia(pedidoComp)" class="btn btn-success m-1">Finalizar pedido</a>
           </div>
 
@@ -129,9 +129,9 @@
   </body>
   </html>
 
-  <script type="text/javascript" src="/js/lista.js"></script>
-  <script type="text/javascript" src="/js/blocos_carrinho.js"></script>
-  <script type="text/javascript" src="/js/finalizapedido.js"></script>
+  <script type="text/javascript" src="/king_NEs/js/lista.js"></script>
+  <script type="text/javascript" src="/king_NEs/js/blocos_carrinho.js"></script>
+  <script type="text/javascript" src="/king_NEs/js/finalizapedido.js"></script>
   <script>
 
     let conteudo = document.getElementById('conteudo')
