--- a/html/Suplementos.html
+++ b/html/Suplementos.html
@@ -93,7 +93,7 @@
   <body class="bg-dark">
       
         <header id="header" class="justify-content-between"></header>
-        <script type="text/javascript" src="/js/header.js"></script>
+        <script type="text/javascript" src="/king_NEs/js/header.js"></script>
 
         <div class="text-center">
           <h1 class="mt-2 text-light">Suplementos</h1>
@@ -121,8 +121,8 @@
   </body>
   </html>
 
-  <script type="text/javascript" src="/js/lista.js"></script>
-  <script type="text/javascript" src="/js/blocos.js"></script>
+  <script type="text/javascript" src="/king_NEs/js/lista.js"></script>
+  <script type="text/javascript" src="/king_NEs/js/blocos.js"></script>
   <script>
 
     let conteudo = document.getElementById('conteudo')
