--- a/html/usuario.html
+++ b/html/usuario.html
@@ -90,7 +90,7 @@
   <body class="bg-dark">
       
         <header id="header" class="justify-content-between"></header>
-        <script type="text/javascript" src="/js/header.js"></script>
+        <script type="text/javascript" src="/king_NEs/js/header.js"></script>
 
         <div class="text-center">
           <h3 class="text-light">Dados do usuário:</h3>
@@ -122,8 +122,8 @@
   </body>
   </html>
 
-  <script type="text/javascript" src="/js/lista.js"></script>
-  <script type="text/javascript" src="/js/blocos.js"></script>
+  <script type="text/javascript" src="/king_NEs/js/lista.js"></script>
+  <script type="text/javascript" src="/king_NEs/js/blocos.js"></script>
   <script>
 
     let conteudo = document.getElementById('conteudo')
