--- a/html/usuario.html
+++ b/html/usuario.html
@@ -93,7 +93,7 @@
         <script type="text/javascript" src="/king_NEs/js/header.js"></script>
 
         <div class="text-center">
-          <h3 class="text-light">Dados do usuário:</h3>
+          <h3 class="text-light">Dados do usuário</h3>
 
           <div class="m-5 text-light bg-realy-dark p-3" style="border-radius: 5px;">
             <h4 class="text-left">Nome:</h4>
