--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       </head>
     
       <header id="header" class="justify-content-between"></header>
-        <script type="text/javascript" src="/king_NEs/js/header.js"></script>
+      <script type="text/javascript" src="/king_NEs/js/header.js"></script>
 
 
         <!-- CARROSSEL -->
@@ -137,6 +137,7 @@
       <footer>
         <h5 class="text-light">Footer</h5>
       </footer>
+      <script type="text/javascript" src="/king_NEs/js/footer.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
