--- a/html/ProteinaAnimal.html
+++ b/html/ProteinaAnimal.html
@@ -108,8 +108,8 @@
         </div>
 
 
-        <footer>
-          <h5 class="text-light">Footer</h5>
+        <footer id="footer">
+          
         </footer>
         <script type="text/javascript" src="/king_NEs/js/footer.js"></script>
 
