--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
 
           
 
-      <footer>
-        <h5 class="text-light">Footer</h5>
+      <footer id="footer">
+        
       </footer>
       <script type="text/javascript" src="/king_NEs/js/footer.js"></script>
 
