--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.1/examples/headers/">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.2.1/dist/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="/style.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="/king_NEs/style.css" crossorigin="anonymous">
   
     <link href="../static/css/headers.css" rel="stylesheet">
 
@@ -92,46 +94,45 @@
       <script type="text/javascript" src="/king_NEs/js/header.js"></script>
 
 
-        <!-- CARROSSEL -->
-        <!-- <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="false">
-            <div class="carousel-indicators">
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            </div>
-            <div class="carousel-inner">
-              <div class="carousel-item active">
-                <img src="/imagens/teste.png" class="d-block h-50" alt="">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>First slide label</h5>
-                  <p>Some representative placeholder content for the first slide.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="/imagens/teste.png" class="d-block h-50" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Second slide label</h5>
-                  <p>Some representative placeholder content for the second slide.</p>
-                </div>
-              </div>
-              <div class="carousel-item">
-                <img src="/imagens/teste.png" class="d-block h-50" alt="...">
-                <div class="carousel-caption d-none d-md-block">
-                  <h5>Third slide label</h5>
-                  <p>Some representative placeholder content for the third slide.</p>
-                </div>
-              </div>
-            </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-              <span class="visually-hidden">Anterior</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-              <span class="visually-hidden">Próximo</span>
-              <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            </button>
-          </div> -->
-
+       <!-- Carrossel -->
+    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100" style="max-height: 800px" src="/imagens/teste.png" alt="Primeiro Slide">
+          <div class="carousel-caption d-none d-md-block">
+              <h5>Promoção 1</h5>
+              <p>Descrição de promoção.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" style="max-height: 800px" src="/imagens/peitodefrango.jpg" alt="Segundo Slide">
+          <div class="carousel-caption d-none d-md-block">
+              <h5>Promoção 2</h5>
+              <p>Descrição de promoção.</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100" style="max-height: 800px" src="/imagens/teste.png" alt="Terceiro Slide">
+          <div class="carousel-caption d-none d-md-block">
+              <h5>Promoção 3</h5>
+              <p>Descrição de promoção.</p>
+          </div>
+        </div>
+      </div>
+      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Anterior</span>
+      </a>
+      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Próximo</span>
+      </a>
+    </div>
           
 
       <footer id="footer">
