--- a/index.html
+++ b/index.html
@@ -103,21 +103,21 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" style="max-height: 800px" src="/imagens/teste.png" alt="Primeiro Slide">
+          <img class="d-block w-100" style="max-height: 800px" src="/king_NEs//imagens/teste.png" alt="Primeiro Slide">
           <div class="carousel-caption d-none d-md-block">
               <h5>Promoção 1</h5>
               <p>Descrição de promoção.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" style="max-height: 800px" src="/imagens/peitodefrango.jpg" alt="Segundo Slide">
+          <img class="d-block w-100" style="max-height: 800px" src="/king_NEs//imagens/peitodefrango.jpg" alt="Segundo Slide">
           <div class="carousel-caption d-none d-md-block">
               <h5>Promoção 2</h5>
               <p>Descrição de promoção.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" style="max-height: 800px" src="/imagens/teste.png" alt="Terceiro Slide">
+          <img class="d-block w-100" style="max-height: 800px" src="/king_NEs//imagens/teste.png" alt="Terceiro Slide">
           <div class="carousel-caption d-none d-md-block">
               <h5>Promoção 3</h5>
               <p>Descrição de promoção.</p>
