--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="/king_NEs/imagens/teste.jpg" alt="Segundo Slide">
+          <img class="d-block w-100" src="/king_NEs/imagens/teste.png" alt="Segundo Slide">
           <div class="carousel-caption d-none d-md-block">
               <h5>Promoção 2</h5>
               <p>Descrição de promoção.</p>
