--- a/index.html
+++ b/index.html
@@ -89,7 +89,9 @@
     </style>
 
       </head>
-    
+  
+    <body class="bg-dark">
+
       <header id="header" class="justify-content-between"></header>
       <script type="text/javascript" src="/king_NEs/js/header.js"></script>
 
