--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
     </div>
           
 
-      <footer id="footer">
+      <footer id="footer" class="mt-5">
         
       </footer>
       <script type="text/javascript" src="/king_NEs/js/footer.js"></script>
