--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 
        <!-- Carrossel -->
-    <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+    <div id="carrossel" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -105,21 +105,21 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
-          <img class="d-block w-100" src="/king_NEs/imagens/teste.png" alt="Primeiro Slide">
+          <img class="d-block w-100" src="/king_NEs/imagens/teste1.png" alt="Primeiro Slide">
           <div class="carousel-caption d-none d-md-block">
               <h5>Promoção 1</h5>
               <p>Descrição de promoção.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="/king_NEs/imagens/teste.png" alt="Segundo Slide">
+          <img class="d-block w-100" src="/king_NEs/imagens/teste2.png" alt="Segundo Slide">
           <div class="carousel-caption d-none d-md-block">
               <h5>Promoção 2</h5>
               <p>Descrição de promoção.</p>
           </div>
         </div>
         <div class="carousel-item">
-          <img class="d-block w-100" src="/king_NEs/imagens/teste.png" alt="Terceiro Slide">
+          <img class="d-block w-100" src="/king_NEs/imagens/teste3.png" alt="Terceiro Slide">
           <div class="carousel-caption d-none d-md-block">
               <h5>Promoção 3</h5>
               <p>Descrição de promoção.</p>
