--- a/index.html
+++ b/index.html
@@ -99,9 +99,9 @@
        <!-- Carrossel -->
     <div id="carrossel" class="carousel slide" data-ride="carousel">
       <ol class="carousel-indicators">
-        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carrossel" data-slide-to="0" class="active"></li>
+        <li data-target="#carrossel" data-slide-to="1"></li>
+        <li data-target="#carrossel" data-slide-to="2"></li>
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
