--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 
        <!-- Carrossel -->
-    <div id="carrossel" class="carousel slide" data-ride="carousel">
+    <div id="carrossel" class="carousel slide" data-interval="1000" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carrossel" data-slide-to="0" class="active"></li>
         <li data-target="#carrossel" data-slide-to="1"></li>
