--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
 
        <!-- Carrossel -->
-    <div id="carrossel" class="carousel slide" data-interval="1000" data-ride="carousel">
+    <div id="carrossel" class="carousel slide" data-interval="2500" data-ride="carousel">
       <ol class="carousel-indicators">
         <li data-target="#carrossel" data-slide-to="0" class="active"></li>
         <li data-target="#carrossel" data-slide-to="1"></li>
@@ -126,11 +126,11 @@
           </div>
         </div>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+      <a class="carousel-control-prev" href="#carrossel" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
         <span class="sr-only">Anterior</span>
       </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+      <a class="carousel-control-next" href="#carrossel" role="button" data-slide="next">
         <span class="carousel-control-next-icon" aria-hidden="true"></span>
         <span class="sr-only">Próximo</span>
       </a>
