--- a/index.html
+++ b/index.html
@@ -95,48 +95,48 @@
       <header id="header" class="justify-content-between"></header>
       <script type="text/javascript" src="/king_NEs/js/header.js"></script>
 
-
-    <h3>Ofertas</h3>
-       <!-- Carrossel -->
-    <div id="carrossel" class="carousel slide" data-interval="2500" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carrossel" data-slide-to="0" class="active"></li>
-        <li data-target="#carrossel" data-slide-to="1"></li>
-        <li data-target="#carrossel" data-slide-to="2"></li>
-      </ol>
-      <div class="carousel-inner">
-        <div class="carousel-item active">
-          <img class="d-block w-100" style="min-height: 340px;" src="/king_NEs/imagens/teste1.png" alt="Primeiro Slide">
-          <div class="carousel-caption d-none d-md-block">
-              <h5>Promoção 1</h5>
-              <p>Descrição de promoção.</p>
+      <div id="main" class="text-light">
+        <h3>Ofertas</h3>
+          <!-- Carrossel -->
+        <div id="carrossel" class="carousel slide" data-interval="2500" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carrossel" data-slide-to="0" class="active"></li>
+            <li data-target="#carrossel" data-slide-to="1"></li>
+            <li data-target="#carrossel" data-slide-to="2"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" style="min-height: 340px;" src="/king_NEs/imagens/teste1.png" alt="Primeiro Slide">
+              <div class="carousel-caption d-none d-md-block">
+                  <h5>Promoção 1</h5>
+                  <p>Descrição de promoção.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" style="min-height: 340px;" src="/king_NEs/imagens/teste2.png" alt="Segundo Slide">
+              <div class="carousel-caption d-none d-md-block">
+                  <h5>Promoção 2</h5>
+                  <p>Descrição de promoção.</p>
+              </div>
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" style="min-height: 340px;" src="/king_NEs/imagens/teste3.png" alt="Terceiro Slide">
+              <div class="carousel-caption d-none d-md-block">
+                  <h5>Promoção 3</h5>
+                  <p>Descrição de promoção.</p>
+              </div>
+            </div>
           </div>
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" style="min-height: 340px;" src="/king_NEs/imagens/teste2.png" alt="Segundo Slide">
-          <div class="carousel-caption d-none d-md-block">
-              <h5>Promoção 2</h5>
-              <p>Descrição de promoção.</p>
-          </div>
-        </div>
-        <div class="carousel-item">
-          <img class="d-block w-100" style="min-height: 340px;" src="/king_NEs/imagens/teste3.png" alt="Terceiro Slide">
-          <div class="carousel-caption d-none d-md-block">
-              <h5>Promoção 3</h5>
-              <p>Descrição de promoção.</p>
-          </div>
+          <a class="carousel-control-prev" href="#carrossel" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Anterior</span>
+          </a>
+          <a class="carousel-control-next" href="#carrossel" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Próximo</span>
+          </a>
         </div>
       </div>
-      <a class="carousel-control-prev" href="#carrossel" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Anterior</span>
-      </a>
-      <a class="carousel-control-next" href="#carrossel" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Próximo</span>
-      </a>
-    </div>
-          
 
       <footer id="footer" class="mt-5">
         
