--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
       <script type="text/javascript" src="/king_NEs/js/header.js"></script>
 
       <div id="main" class="text-light">
-        <h3>Ofertas</h3>
+        <!-- <h3>Ofertas</h3> -->
           <!-- Carrossel -->
         <div id="carrossel" class="carousel slide" data-interval="2500" data-ride="carousel">
           <ol class="carousel-indicators">
